# moiliere

./: main.py  pyproject.toml  quote.json  test.py
moliere/: cli.py  config.py
moliere.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: caribbeancode.html
